Progressing with the UI

--- a/index.html
+++ b/index.html
@@ -14,9 +14,22 @@
     </div>
     <div id="content">
         <div id="menu">
-            <button id="color-select">color-select</button>
-            <button id="eraser">eraser</button>
-            <button id="clear">clear</button>
+            <div>
+                <h2>Color</h2>
+                <button id="color-select"><img src="#"></button>
+            </div>
+            <div>
+                <h2>Eraser</h2>
+                <button id="eraser"><img src="#"></button>
+            </div>
+            <div>
+                <h2>Clear</h2>
+                <button id="clear"><img src="#">></button>
+            </div>
+            <div>
+                <h2>RGB</h2>
+                <button id="clear"><img src="#">></button>
+            </div>
         </div>
         <div id="canvas">
             
